objects/Contact.object
<CustomObject><fields>
        <fullName>Account_Status__c</fullName>
        <formula>text( Account.Account_Status__c )</formula>
        <inlineHelpText>This field is set on the Account level by HM</inlineHelpText>
        <label>Account Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Biological_Sex__c</fullName>
        <description>User registration data passed by Helix Marketplace API.</description>
        <inlineHelpText>User registration data passed by Helix Marketplace API.</inlineHelpText>
        <label>Biological Sex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Company_BillTo__c</fullName>
        <description>To allow for Company in address</description>
        <inlineHelpText>To allow for Company in address</inlineHelpText>
        <label>Company(BillTo)</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Company_ShipTo__c</fullName>
        <description>To allow for Company in address</description>
        <inlineHelpText>To allow for Company in address</inlineHelpText>
        <label>Company(ShipTo)</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Customer_Age_Range__c</fullName>
        <description>Used for manifest upload. Assigns age bin to Contact based on the current date compared to birthdate.</description>
        <formula>if((Today()- Birthdate) / 365 &lt; 6,"0-5",
if((Today()- Birthdate) / 365 &lt; 11,"6-10",
if((Today()- Birthdate) / 365 &lt; 16,"11-15",
if((Today()- Birthdate) / 365 &lt; 21,"16-20",
if((Today()- Birthdate) / 365 &lt; 26,"21-25",
if((Today()- Birthdate) / 365 &lt; 31,"26-30",
if((Today()- Birthdate) / 365 &lt; 36,"31-35",
if((Today()- Birthdate) / 365 &lt; 41,"36-40",
if((Today()- Birthdate) / 365 &lt; 46,"41-45",
if((Today()- Birthdate) / 365 &lt; 51,"46-50",
if((Today()- Birthdate) / 365 &lt; 56,"51-55",
if((Today()- Birthdate) / 365 &lt; 61,"56-60",
if((Today()- Birthdate) / 365 &lt; 66,"61-65",
if((Today()- Birthdate) / 365 &lt; 71,"66-70",
if((Today()- Birthdate) / 365 &lt; 76,"71-75",
if((Today()- Birthdate) / 365 &lt; 81,"76-80",
if((Today()- Birthdate) / 365 &lt; 86,"81-85",
if((Today()- Birthdate) / 365 &lt; 91,"86-90",
if((Today()- Birthdate) / 365 &lt; 96,"91-95",
if((Today()- Birthdate) / 365 &lt; 101,"96-100",
if((Today()- Birthdate) / 365 &lt; 106,"101-105",
if((Today()- Birthdate) / 365 &lt; 111,"106-110",
if((Today()- Birthdate) / 365 &lt; 116,"111-115",
if((Today()- Birthdate) / 365 &lt; 121,"116-120",
"Error"))))))))))))))))))))))))</formula>
        <inlineHelpText>Used for manifest upload. Assigns age bin to Contact based on the current date compared to birthdate.</inlineHelpText>
        <label>Customer Age Range</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Marketing_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by RedPoint</description>
        <inlineHelpText>Used by RedPoint</inlineHelpText>
        <label>Marketing Opt Out</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Naturally_Black_Hair__c</fullName>
        <description>User registration data passed by Helix Marketplace API.</description>
        <inlineHelpText>User registration data passed by Helix Marketplace API.</inlineHelpText>
        <label>Naturally Black Hair?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>I don't know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Reminder_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by RedPoint</description>
        <inlineHelpText>Used by RedPoint</inlineHelpText>
        <label>Reminder Opt Out</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sourcing_Exp_Date__c</fullName>
        <formula>IF(ISBLANK(Sourcing_Partner__c),null,

IF(AND(Month(DATEVALUE(CreatedDate) )=2,Day(DATEVALUE(CreatedDate))=29),
DATE(YEAR(DATEVALUE(CreatedDate)) + 2, Month(DATEVALUE(CreatedDate)),Day(DATEVALUE(CreatedDate))-1),
DATE(YEAR(DATEVALUE(CreatedDate)) + 2, Month(DATEVALUE(CreatedDate)),Day(DATEVALUE(CreatedDate)))
)

)</formula>
        <label>Sourcing Expiration Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Sourcing_Partner_ID__c</fullName>
        <formula>Sourcing_Partner__r.Partner_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourcing Partner ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Sourcing_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner Account that brought in New Customer</description>
        <inlineHelpText>Partner Account that brought in New Customer</inlineHelpText>
        <label>Sourcing Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sourced Contacts</relationshipLabel>
        <relationshipName>Sourced_Contacts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Stripe_Customer_ID__c</fullName>
        <description>DEPRECATED!!!   Used by HM if charge authorization has expired.</description>
        <inlineHelpText>DEPRECATED!!!   Used by HM if charge authorization has expired.</inlineHelpText>
        <label>Stripe Customer ID (DEPRECATED)</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>userid__c</fullName>
        <description>User registration data passed by Helix Marketplace API.</description>
        <externalId>true</externalId>
        <inlineHelpText>User registration data passed by Helix Marketplace API.</inlineHelpText>
        <label>UserID</label>
        <length>39</length>
        <type>Text</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews><recordTypes>
        <fullName>Helix_B2B_Contact</fullName>
        <active>true</active>
        <description>Record type for standard B2B Contacts</description>
        <label>Helix B2B Contact</label>
    </recordTypes><recordTypes>
        <fullName>Helix_B2C_Contact</fullName>
        <active>true</active>
        <description>Record Type for Contacts who purchase through Helix Marketplace</description>
        <label>Helix B2C Contact</label>
    </recordTypes></CustomObject>